Building a model in Keras

--- a/Deep Convolutional Models Case Studies.ipynb
+++ b/Deep Convolutional Models Case Studies.ipynb
@@ -226,11 +226,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from keras import layers\n",
@@ -279,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -324,6 +332,325 @@
     "- 图片维度 (64,64,3)\n",
     "- 训练集: 600 张图片\n",
     "- 测试集: 150 张图片"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 使用Keras构建模型\n",
+    "\n",
+    "Keras非常适合用来做快速原型，在非常短的时间内，我们就可以构建出效果非常好的模型。\n",
+    "\n",
+    "下面是Keras模型的一个例子：\n",
+    "```python\n",
+    "def model(input_shape):\n",
+    "    # Define the input placeholder as a tensor with shape input_shape. Think of this as your input image!\n",
+    "    X_input = Input(input_shape)\n",
+    "\n",
+    "    # Zero-Padding: pads the border of X_input with zeroes\n",
+    "    X = ZeroPadding2D((3, 3))(X_input)\n",
+    "\n",
+    "    # CONV -> BN -> RELU Block applied to X\n",
+    "    X = Conv2D(32, (7, 7), strides = (1, 1), name = 'conv0')(X)\n",
+    "    X = BatchNormalization(axis = 3, name = 'bn0')(X)\n",
+    "    X = Activation('relu')(X)\n",
+    "\n",
+    "    # MAXPOOL\n",
+    "    X = MaxPooling2D((2, 2), name='max_pool')(X)\n",
+    "\n",
+    "    # FLATTEN X (means convert it to a vector) + FULLYCONNECTED\n",
+    "    X = Flatten()(X)\n",
+    "    X = Dense(1, activation='sigmoid', name='fc')(X)\n",
+    "\n",
+    "    # Create model. This creates your Keras model instance, you'll use this instance to train/test the model.\n",
+    "    model = Model(inputs = X_input, outputs = X, name='HappyModel')\n",
+    "    \n",
+    "    return model\n",
+    "```\n",
+    "\n",
+    "注意到，Keras使用了和Tensorflow或者numpy不太相同的变量命名风格。最主要的一点，它并没有随着前向传播过程创建并赋值一系列诸如 `X`, `Z1`, `A1`, `Z2`, `A2` 的变量。对于不同的层，Keras代码中仅仅是通过 `X = ...` 来重新对 `X` 赋值。换句话说，前向传播中的每个步骤，我们不断地将计算结果重新写回同一个变量 `X`。唯一的例外是 `X_input`，考虑后最后我们需要用 `model = Model(inputs = X_input, ...)` 来创建Keras模型，`X_input` 不会被覆盖。\n",
+    "\n",
+    "**练习**：实现 `HappyModel()`。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: HappyModel\n",
+    "\n",
+    "def HappyModel(input_shape):\n",
+    "    \"\"\"\n",
+    "    Implementation of the HappyModel.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    input_shape -- shape of the images of the dataset\n",
+    "\n",
+    "    Returns:\n",
+    "    model -- a Model() instance in Keras\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE ###\n",
+    "    # Feel free to use the suggested outline in the text above to get started, and run through the whole\n",
+    "    # exercise (including the later portions of this notebook) once. The come back also try out other\n",
+    "    # network architectures as well. \n",
+    "        # Define the input placeholder as a tensor with shape input_shape. Think of this as your input image!\n",
+    "    X_input = Input(input_shape)\n",
+    "\n",
+    "    # Zero-Padding: pads the border of X_input with zeroes\n",
+    "    X = ZeroPadding2D((3, 3))(X_input)\n",
+    "\n",
+    "    # CONV -> BN -> RELU Block applied to X\n",
+    "    X = Conv2D(32, (7, 7), strides = (1, 1), name = 'conv0')(X)\n",
+    "    X = BatchNormalization(axis = 3, name = 'bn0')(X)\n",
+    "    X = Activation('relu')(X)\n",
+    "\n",
+    "    # MAXPOOL\n",
+    "    X = MaxPooling2D((2, 2), name='max_pool')(X)\n",
+    "\n",
+    "    # FLATTEN X (means convert it to a vector) + FULLYCONNECTED\n",
+    "    X = Flatten()(X)\n",
+    "    X = Dense(1, activation='sigmoid', name='fc')(X)\n",
+    "\n",
+    "    # Create model. This creates your Keras model instance, you'll use this instance to train/test the model.\n",
+    "    model = Model(inputs = X_input, outputs = X, name='HappyModel')\n",
+    "    \n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们创建了一个函数，来描述我们的模型。要训练和测试这个模型，在Keras中分为四步：\n",
+    "1. 调用上面的函数创建模型。\n",
+    "2. 调用 `model.compile(optimizer = \"...\", loss = \"...\", metrics = [\"accuracy\"])` 编译模型。\n",
+    "3. 调用 `model.fit(x = ..., y = ..., epochs = ..., batch_size = ...)` 训练模型。\n",
+    "4. 调用 `model.evaluate(x = ..., y = ...)` 测试模型。\n",
+    "\n",
+    "如果你想了解关于 `model.compile()`, `model.fit()`, `model.evaluate()` 及其参数的更多信息，可以参考官方的[Keras文档](https://keras.io/models/model/).\n",
+    "\n",
+    "**练习**: 实现步骤1，创建模型。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### START CODE HERE ### (1 line)\n",
+    "happyModel = HappyModel((X_train.shape[1], X_train.shape[2], X_train.shape[3]))\n",
+    "### END CODE HERE ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**练习**: 实现步骤2，设置学习过程的相关参数以编译模型。请小心地选择 `compile()` 的三个参数。提示：快乐之家是一个二分类问题。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### START CODE HERE ### (1 line)\n",
+    "happyModel.compile(optimizer=\"Adam\", loss=\"binary_crossentropy\", metrics=[\"accuracy\"])\n",
+    "### END CODE HERE ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**练习**: 实现步骤3，训练模型。选择epochs和批次大小。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 1.6885 - acc: 0.6850\n",
+      "Epoch 2/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.4840 - acc: 0.8133\n",
+      "Epoch 3/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1665 - acc: 0.9383\n",
+      "Epoch 4/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.2119 - acc: 0.9033\n",
+      "Epoch 5/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1183 - acc: 0.9500\n",
+      "Epoch 6/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1503 - acc: 0.9450\n",
+      "Epoch 7/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1109 - acc: 0.9633\n",
+      "Epoch 8/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1329 - acc: 0.9550\n",
+      "Epoch 9/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0636 - acc: 0.9800\n",
+      "Epoch 10/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0613 - acc: 0.9850\n",
+      "Epoch 11/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0496 - acc: 0.9850\n",
+      "Epoch 12/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0386 - acc: 0.9900\n",
+      "Epoch 13/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0565 - acc: 0.9833\n",
+      "Epoch 14/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0648 - acc: 0.9700\n",
+      "Epoch 15/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1562 - acc: 0.9600\n",
+      "Epoch 16/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0921 - acc: 0.9617\n",
+      "Epoch 17/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0789 - acc: 0.9733\n",
+      "Epoch 18/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0461 - acc: 0.9883\n",
+      "Epoch 19/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0487 - acc: 0.9867\n",
+      "Epoch 20/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1408 - acc: 0.9533\n",
+      "Epoch 21/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1170 - acc: 0.9517\n",
+      "Epoch 22/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0688 - acc: 0.9833\n",
+      "Epoch 23/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0474 - acc: 0.9867\n",
+      "Epoch 24/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0631 - acc: 0.9717\n",
+      "Epoch 25/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0553 - acc: 0.9817\n",
+      "Epoch 26/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0364 - acc: 0.9883\n",
+      "Epoch 27/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0606 - acc: 0.9783\n",
+      "Epoch 28/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0680 - acc: 0.9783\n",
+      "Epoch 29/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0412 - acc: 0.9867\n",
+      "Epoch 30/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0419 - acc: 0.9833\n",
+      "Epoch 31/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0469 - acc: 0.9850\n",
+      "Epoch 32/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0246 - acc: 0.9933\n",
+      "Epoch 33/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1143 - acc: 0.9583\n",
+      "Epoch 34/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1125 - acc: 0.9600\n",
+      "Epoch 35/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1785 - acc: 0.9467\n",
+      "Epoch 36/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.1136 - acc: 0.9617\n",
+      "Epoch 37/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.2311 - acc: 0.9483\n",
+      "Epoch 38/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0654 - acc: 0.9883\n",
+      "Epoch 39/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0321 - acc: 0.9867\n",
+      "Epoch 40/40\n",
+      "600/600 [==============================] - 2s 3ms/step - loss: 0.0653 - acc: 0.9783\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f822c760d68>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### START CODE HERE ### (1 line)\n",
+    "happyModel.fit(x=X_train, y=Y_train, epochs=40, batch_size=16)\n",
+    "### END CODE HERE ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意这时如果重新执行 `fit()`，`model` 会使用之前已经学到的参数继续训练，而不是重新对参数初始化。\n",
+    "\n",
+    "**练习**: 实现步骤4，即测试/评估模型。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150/150 [==============================] - 0s 1ms/step\n",
+      "\n",
+      "Loss = 0.0747678126891\n",
+      "Test Accuracy = 0.979999997616\n"
+     ]
+    }
+   ],
+   "source": [
+    "### START CODE HERE ### (1 line)\n",
+    "preds = happyModel.evaluate(x=X_test, y=Y_test)\n",
+    "### END CODE HERE ###\n",
+    "print()\n",
+    "print (\"Loss = \" + str(preds[0]))\n",
+    "print (\"Test Accuracy = \" + str(preds[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如果 `happyModel()` 有效的话，这里我们会获得一个远高于随机值（50%）的准确率。\n",
+    "\n",
+    "这里给一个参考值，**40 epochs，95%的测试准确率**（99%的训练准确率），微批的大小为16，使用adam优化器。\n",
+    "\n",
+    "如果这里没能取得很好的准确率（80%以上），下面有一些策略可以考虑尝试一下。\n",
+    "\n",
+    "- 尝试使用 CONV->BATCHNORM->RELU 这样的结构\n",
+    "```python\n",
+    "X = Conv2D(32, (3, 3), strides = (1, 1), name = 'conv0')(X)\n",
+    "X = BatchNormalization(axis = 3, name = 'bn0')(X)\n",
+    "X = Activation('relu')(X)\n",
+    "```\n",
+    "直到高度和宽度非常小，而通道数非常大（比如大约32）。这时候，立方体中很多有用的信息都编码在通道维度中。之后可以打平立方体，使用一个全连接层。\n",
+    "- 在上面的结构后，使用最大池化层。这可以用来降低高度和宽度的维度。\n",
+    "- 修改优化器，我们发现Adam在这个问题中比较好用。\n",
+    "- 如果模型跑不起来，用内存问题，尝试降低微批大小（12是一个不错的折中值）\n",
+    "- 跑更多轮次（epoch），知道训练集准确率进入平缓状态。\n",
+    "\n",
+    "即便你的模型准确率已经不错，也还是可以试着修改参数，以获得更好的效果。\n",
+    "\n",
+    "**注意**: 如果你对模型的超参进行调节，测试集实际上就变成了开发集，你的模型很可能会对测试集（开发集）过拟合。在本练习中，我们暂时不考虑这个问题。"
    ]
   },
   {
