Other useful functions in Keras

--- a/Deep Convolutional Models Case Studies.ipynb
+++ b/Deep Convolutional Models Case Studies.ipynb
@@ -654,6 +654,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Keras中其它一些有用的函数\n",
+    "\n",
+    "下面有两个Keras中的特性，可能会比较有用：\n",
+    "- `model.summary()`: 以表格的形式打印出模型各层输入输出的大小。\n",
+    "- `plot_model()`: 打印模型图片，甚至可以使用SVG()函数保存为\".png\"形式。\n",
+    "\n",
+    "执行下面的代码。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_1 (InputLayer)         (None, 64, 64, 3)         0         \n",
+      "_________________________________________________________________\n",
+      "zero_padding2d_1 (ZeroPaddin (None, 70, 70, 3)         0         \n",
+      "_________________________________________________________________\n",
+      "conv0 (Conv2D)               (None, 64, 64, 32)        4736      \n",
+      "_________________________________________________________________\n",
+      "bn0 (BatchNormalization)     (None, 64, 64, 32)        128       \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 64, 64, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pool (MaxPooling2D)      (None, 32, 32, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 32768)             0         \n",
+      "_________________________________________________________________\n",
+      "fc (Dense)                   (None, 1)                 32769     \n",
+      "=================================================================\n",
+      "Total params: 37,633\n",
+      "Trainable params: 37,569\n",
+      "Non-trainable params: 64\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "happyModel.summary()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
