YOLO model details

--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -178,6 +178,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 11. 车辆检测 Autonomous driving - Car detection\n",
+    "\n",
+    "本节我们将会使用YOLO模型进行目标检测，YOLO算法主要来自于以下两篇论文：Redmon et al., 2016 (https://arxiv.org/abs/1506.02640) and Redmon and Farhadi, 2016 (https://arxiv.org/abs/1612.08242). \n",
+    "\n",
+    "**这一节，我们将会**:\n",
+    "- 对一个车辆检测数据集，应用目标检测算法\n",
+    "- 处理包围盒\n",
+    "\n",
+    "执行以下代码来引入相关的包和依赖。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import argparse\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.pyplot import imshow\n",
+    "import scipy.io\n",
+    "import scipy.misc\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import PIL\n",
+    "import tensorflow as tf\n",
+    "from keras import backend as K\n",
+    "from keras.layers import Input, Lambda, Conv2D\n",
+    "from keras.models import load_model, Model\n",
+    "from yolo_utils import read_classes, read_anchors, generate_colors, preprocess_image, draw_boxes, scale_boxes\n",
+    "from yad2k.models.keras_yolo import yolo_head, yolo_boxes_to_corners, preprocess_true_boxes, yolo_loss, yolo_body\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.1 问题陈述\n",
+    "\n",
+    "作为研发自动驾驶汽车的一个核心组件，我们需要首先构建一个车辆检测系统。为了收集数据，我们在车辆的前方挂载了一个摄像头，行驶过程中每隔几秒就对路面情况进行拍照。\n",
+    "\n",
+    "<center>\n",
+    "<video width=\"400\" height=\"200\" src=\"img/road_video_compressed2.mp4\" type=\"video/mp4\" controls>\n",
+    "</video>\n",
+    "</center>\n",
+    "\n",
+    "所有的图片现在都放到了一个文件夹中，并且已经完成了打标，每张图片上，每辆车都画出了一个包围盒。下面是一个包围盒的实例。\n",
+    "\n",
+    "<img src=\"img/box_label.png\" style=\"width:500px;height:250;\">\n",
+    "<caption><center> <u> **Figure 1** </u>: **Definition of a box**<br> </center></caption>\n",
+    "\n",
+    "如果我们目前有80个分类需要YOLO算法来识别，可以将类别标签 $c$ 表示为一个1到80的整型数字，或者一个80维的向量（其中一个元素是1，其它都是0）。本节中，我们会视每一步的使用便利，来决定使用哪一种表示。\n",
+    "\n",
+    "这个练习中，我们会学得YOLO是如果运作的，之后再将其应用于车辆检测。由于YOLO模型训练的过程计算消耗很大，我们会载入一个预先训练好的模型。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.2 YOLO\n",
+    "\n",
+    "YOLO（只看一次）是目前非常流行的目标检测算法，它的准确率高，同时还能够实时进行计算。只看一次意味着只需要一次前向传播，算法就可以做出预测。在进行了非极大值抑制之后，算法就可以产出识别的目标以及对应的包围盒。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 11.2.1 模型细节\n",
+    "\n",
+    "数据情况：\n",
+    "- **输入input** 是一批图片，维度为(m, 608, 608, 3)\n",
+    "- **输出output** 是一组包围盒及其对应的分类名称。每个包围盒由6个数字 $(p_c, b_x, b_y, b_h, b_w, c)$ 来表示，如上所述。如果将 $c$ 扩展为一个80维的向量，那么每个包围盒就可以表示为85个数字。\n",
+    "\n",
+    "我们将会使用5个archor boxes。所以这个YOLO的架构可以认为是：IMAGE (m, 608, 608, 3) -> DEEP CNN -> ENCODING (m, 19, 19, 5, 85)，encoding的部分如图所示：\n",
+    "\n",
+    "<img src=\"img/architecture.png\" style=\"width:700px;height:400;\">\n",
+    "<caption><center> <u> **Figure 2** </u>: **Encoding architecture for YOLO**<br> </center></caption>\n",
+    "\n",
+    "如果一个目标的中心点若在特定网格内，那么这个网格需要检测出对应的目标。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "考虑到我们使用了5个archor boxes，那么19 × 19的网格，每一个都包含了5个archor boxes的信息。每个anchor boxes由他们的宽和高来定义。\n",
+    "\n",
+    "为了方便，我们将 (19, 19, 5, 85) 编码的最后两个维度打平，所以深度圣经网络的输出将会是 (19, 19, 425)。\n",
+    "\n",
+    "<img src=\"img/flatten.png\" style=\"width:700px;height:400;\">\n",
+    "<caption><center> <u> **Figure 3** </u>: **Flattening the last two last dimensions**<br> </center></caption>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这样，对于（每个网格的）每个box，，我们需要计算元素级别的乘积，抽取出每个box包含每个分类的概率值。\n",
+    "\n",
+    "<img src=\"img/probability_extraction.png\" style=\"width:700px;height:400;\">\n",
+    "<caption><center> <u> **Figure 4** </u>: **Find the class detected by each box**<br> </center></caption>\n",
+    "\n",
+    "下面是对YOLO预测算法进行可视化的一种方法：\n",
+    "- 对19×19的每个网格，找到其最大的概率值（对5个archor boxes，每个都对80的分类，取最大值）\n",
+    "- 对每个网格，根据最可能的分类，进行上色\n",
+    "\n",
+    "可视化的效果如下: \n",
+    "\n",
+    "<img src=\"img/proba_map.png\" style=\"width:300px;height:300;\">\n",
+    "<caption><center> <u> **Figure 5** </u>: Each of the 19x19 grid cells colored according to which class has the largest predicted probability in that cell.<br> </center></caption>\n",
+    "\n",
+    "这个可视化方法并不是YOLO算法进行预测的核心组成部分，但它可以很好地展示算法的中间结果。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "另一种YOLO输出可视化的办法，是直接在原图上绘制产出的包围盒，可视化的效果如下：\n",
+    "\n",
+    "<img src=\"img/anchor_map.png\" style=\"width:200px;height:200;\">\n",
+    "<caption><center> <u> **Figure 6** </u>: Each cell gives you 5 boxes. In total, the model predicts: 19x19x5 = 1805 boxes just by looking once at the image (one forward pass through the network)! Different colors denote different classes. <br> </center></caption>\n",
+    "\n",
+    "在上图中，我们仅仅绘制了概率较高的包围盒，但包围盒的数量仍然过多。我们需要将算法的输出结果，过滤为更小的目标集合。为了达到这个目标，我们需要使用非极大值抑制。具体来说，从模型产出的19×19×5个包围盒开始，我们需要：\n",
+    "- 去除概率较低的包围盒（说明这个包围盒检测到分类的置信度较低）\n",
+    "- 对于相互重合的包围盒，仅选取一个最可信的"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
