--- a/Object detection.ipynb
+++ b/Object detection.ipynb
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -971,6 +971,323 @@
     "    - 得分阈值：如果输出的box，类别概率得分低于阈值，则抛弃\n",
     "    - 最极大值抑制：计算IOU，避免选择重复的包围盒\n",
     "- 上面的步骤完成后，就得到了YOLO的最终输出。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11.3 使用预训练好的YOLO模型对图片进行测试 Test YOLO pretrained model on images\n",
+    "\n",
+    "在这一节，我们将会使用一个预训练好的模型，针对车辆检测数据集进行测试。和之前一样，我们需要首先 **创建一个session，来开始计算图**。执行下面的代码。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sess = K.get_session()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 11.3.1 定义分类、anchor和图片维度 Defining classes, anchors and image shape\n",
+    "\n",
+    "我们需要检测80种分类，使用5种archo box。80个分类和5个box的信息，已经分别储存在\"coco_classes.txt\" 和 \"yolo_anchors.txt\"两个文件中。执行下面的代码块，来导入这些信息。\n",
+    "\n",
+    "车辆检测数据集的图片是 720x1280 的，我们已经将其预处理为 608x608。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class_names = read_classes(\"datasets/coco_classes.txt\")\n",
+    "anchors = read_anchors(\"datasets/yolo_anchors.txt\")\n",
+    "image_shape = (720., 1280.)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 11.3.2 载入预训练的模型\n",
+    "\n",
+    "训练YOLO模型十分耗时，也需要非常大的标记了包围盒的数据集。我们将会载入一个已经训练好的Keras YOLO模型，储存在\"yolo.h5\"中。（这些权重来自YOLO官方网站，Allan Zelener提供了一个转换函数将其转为Keras兼容的格式。严格来说，这些是YOLOv2模型的参数，为了方便理解，我们在这里还是简单称为YOLO模型）。执行下面的代码块来载入模型。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "yolo_model = load_model(\"datasets/yolo.h5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这样预先训练好的YOLO模型权重就已经载入，各层的汇总情况如下："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "yolo_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**提示**: 这个模型将预处理的批量输入图片（维度：(m, 608, 608, 3)），转为维度是  (m, 19, 19, 5, 85) 的张量，如图2所述。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 11.3.3 将模型的输出转换为可用的包围盒张量 Convert output of the model to usable bounding box tensors\n",
+    "\n",
+    "`yolo_model` 的输出是一个 (m, 19, 19, 5, 85) 的张量，这个张量需要一些处理和转换，执行下面的代码块。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "yolo_outputs = yolo_head(yolo_model.output, anchors, len(class_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们需要将 `yolo_outputs` 加入到计算图中。这一组共4个张量，可以输入到 `yolo_eval` 函数中。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 11.3.4 过滤包围盒 Filtering boxes\n",
+    "\n",
+    "`yolo_outputs` 将 `yolo_model`的结果进行了转换。下面调用我们实现的 `yolo_eval` 函数，来过滤包围盒。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "scores, boxes, classes = yolo_eval(yolo_outputs, image_shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 11.3.5 对一张图片进行图计算 Run the graph on an image\n",
+    "\n",
+    "我们已经创建了一个 (`sess`) 计算图，其计算过程如下：\n",
+    "\n",
+    "1. <font color='purple'> yolo_model.input </font> 作为输入，提供给 `yolo_model`，进行计算，产出 <font color='purple'> yolo_model.output </font>\n",
+    "2. <font color='purple'> yolo_model.output </font> 作为输入，提供给 `yolo_head`，进行预处理，产出 <font color='purple'> yolo_outputs </font>\n",
+    "3. <font color='purple'> yolo_outputs </font> 作为输入，提供给 `yolo_eval`，进行过滤，产出预测结果：<font color='purple'> scores, boxes, classes </font>\n",
+    "\n",
+    "**Exercise**: 实现 predict()，对测试集的一张图片进行计算，测试YOLO。我们需要运行一个Tensorflow回话，来计算`scores, boxes, classes`.\n",
+    "\n",
+    "下面的代码同时还使用了图片处理函数:\n",
+    "```python\n",
+    "image, image_data = preprocess_image(\"images/\" + image_file, model_image_size = (608, 608))\n",
+    "```\n",
+    "输出:\n",
+    "- image: Python (PIL) 的图片表示，用来绘制包围盒。\n",
+    "- image_data: 图片的numpy表示，作为CNN的输入\n",
+    "\n",
+    "**注意**: 当一个模型使用了批量正则化（比如YOLO）时，需要再添加一个占位符 {K.learning_phase(): 0}。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def predict(sess, image_file):\n",
+    "    \"\"\"\n",
+    "    Runs the graph stored in \"sess\" to predict boxes for \"image_file\". Prints and plots the preditions.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    sess -- your tensorflow/Keras session containing the YOLO graph\n",
+    "    image_file -- name of an image stored in the \"images\" folder.\n",
+    "    \n",
+    "    Returns:\n",
+    "    out_scores -- tensor of shape (None, ), scores of the predicted boxes\n",
+    "    out_boxes -- tensor of shape (None, 4), coordinates of the predicted boxes\n",
+    "    out_classes -- tensor of shape (None, ), class index of the predicted boxes\n",
+    "    \n",
+    "    Note: \"None\" actually represents the number of predicted boxes, it varies between 0 and max_boxes. \n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Preprocess your image\n",
+    "    image, image_data = preprocess_image(\"images/\" + image_file, model_image_size = (608, 608))\n",
+    "\n",
+    "    # Run the session with the correct tensors and choose the correct placeholders in the feed_dict.\n",
+    "    # You'll need to use feed_dict={yolo_model.input: ... , K.learning_phase(): 0})\n",
+    "    ### START CODE HERE ### (≈ 1 line)\n",
+    "    out_scores, out_boxes, out_classes = sess.run((scores, boxes, classes), feed_dict={yolo_model.input: image_data, K.learning_phase(): 0})\n",
+    "    ### END CODE HERE ###\n",
+    "\n",
+    "    # Print predictions info\n",
+    "    print('Found {} boxes for {}'.format(len(out_boxes), image_file))\n",
+    "    # Generate colors for drawing bounding boxes.\n",
+    "    colors = generate_colors(class_names)\n",
+    "    # Draw bounding boxes on the image file\n",
+    "    draw_boxes(image, out_scores, out_boxes, out_classes, class_names, colors)\n",
+    "    # Save the predicted bounding box on the image\n",
+    "    image.save(os.path.join(\"out\", image_file), quality=90)\n",
+    "    # Display the results in the notebook\n",
+    "    output_image = scipy.misc.imread(os.path.join(\"out\", image_file))\n",
+    "    imshow(output_image)\n",
+    "    \n",
+    "    return out_scores, out_boxes, out_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "out_scores, out_boxes, out_classes = predict(sess, \"test.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **Found 7 boxes for test.jpg**\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **car**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           0.60 (925, 285) (1045, 374)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **car**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           0.66 (706, 279) (786, 350)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **bus**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           0.67 (5, 266) (220, 407)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **car**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           0.70 (947, 324) (1280, 705)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **car**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           0.74 (159, 303) (346, 440)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **car**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           0.80 (761, 282) (942, 412)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **car**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           0.89 (367, 300) (745, 648)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='blue'>\n",
+    "**总结**:\n",
+    "- YOLO是目前最先进的目标检测算法，兼具速度和准确性\n",
+    "- YOLO将输入图片载入一个深度神经网络，产出 19x19x5x85 的立方体\n",
+    "- 这个立方体作为编码，可以视作是 19×19 的网格，每个包含了5个包围盒\n",
+    "- 对所有包围盒使用非极大值抑制，具体来说包括：\n",
+    "    - 得分阈值\n",
+    "    - IoU阈值\n",
+    "- 从随机权重开始训练YOLO模型需要很大的计算量和数据集，我们这里采用了提前训练好的模型。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**参考文献**: YOLO的概念主要来自于下面的两篇论文，而实现参考了Allan Zelener的Github仓库。预训练的权重来自YOLO的官方网站。\n",
+    "- Joseph Redmon, Santosh Divvala, Ross Girshick, Ali Farhadi - [You Only Look Once: Unified, Real-Time Object Detection](https://arxiv.org/abs/1506.02640) (2015)\n",
+    "- Joseph Redmon, Ali Farhadi - [YOLO9000: Better, Faster, Stronger](https://arxiv.org/abs/1612.08242) (2016)\n",
+    "- Allan Zelener - [YAD2K: Yet Another Darknet 2 Keras](https://github.com/allanzelener/YAD2K)\n",
+    "- The official YOLO website (https://pjreddie.com/darknet/yolo/) "
    ]
   },
   {
