Face Recognition: Naive Face Verification

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -91,6 +91,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.6 Show Me the Code\n",
+    "\n",
+    "本节我们将会构建一个人脸识别系统。这一节的主要思路来自于[FaceNet](https://arxiv.org/pdf/1503.03832.pdf)。在课程中我们也提到了[DeepFace](https://research.fb.com/wp-content/uploads/2016/11/deepface-closing-the-gap-to-human-level-performance-in-face-verification.pdf). \n",
+    "\n",
+    "人脸识别问题通常可以分解为一下两类：\n",
+    "- **人脸验证** - “这个人是不是他所宣称的那个人？”。举例：在机场过海关的时候会扫描护照，来验证你（携带护照的人）是护照持有人。手机通过人脸解锁同样也是人脸验证问题。人脸验证是1:1匹配的。\n",
+    "- **人脸识别** - “这个人是谁？”。举例：视频中(https://www.youtube.com/watch?v=wr4rx0Spihs)举例的百度利用人脸识别来确认进入门禁的员工信息。这是1：K匹配的。\n",
+    "\n",
+    "FaceNet的神经网络，将人脸信息最终编码为128个数字的向量。通过比较两个向量，来判断两张照片是否是同一个人。\n",
+    "    \n",
+    "**在本节，我们将会**\n",
+    "- 实现triplet loss函数\n",
+    "- 使用一个预训练的模型来将人脸图片转为为128维的编码\n",
+    "- 使用这些编码来进行人脸验证和人脸识别\n",
+    "\n",
+    "本练习中预训练的卷积模型激活值会使用“通道优先”的表示方法，有别于课件以及之前练习中的“通道最后”的表示法。换言之，一组图片的维度将会是 $(m, n_C, n_H, n_W)$，而不是 $(m, n_H, n_W, n_C)$。两种表示方法在开源实现中都有一定的支持者，目前深度学习社区还没有在这一点上形成同一的标准。\n",
+    "\n",
+    "首先载入各个包。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Conv2D, ZeroPadding2D, Activation, Input, concatenate\n",
+    "from keras.models import Model\n",
+    "from keras.layers.normalization import BatchNormalization\n",
+    "from keras.layers.pooling import MaxPooling2D, AveragePooling2D\n",
+    "from keras.layers.merge import Concatenate\n",
+    "from keras.layers.core import Lambda, Flatten, Dense\n",
+    "from keras.initializers import glorot_uniform\n",
+    "from keras.engine.topology import Layer\n",
+    "from keras import backend as K\n",
+    "K.set_image_data_format('channels_first')\n",
+    "import cv2\n",
+    "import os\n",
+    "import numpy as np\n",
+    "from numpy import genfromtxt\n",
+    "import pandas as pd\n",
+    "import tensorflow as tf\n",
+    "from fr_utils import *\n",
+    "from inception_blocks_v2 import *\n",
+    "\n",
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "np.set_printoptions(threshold=np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.6.0 - 朴素人脸验证\n",
+    "\n",
+    "人脸验证问题中，我们给定两张人脸的照片来判断是否是同一个人。最简单的方法就是对这两张图片进行像素级别的比较。如果原始图片的差异低于某个阈值，就认为是同一个人。\n",
+    "\n",
+    "<img src=\"img/pixel_comparison.png\" style=\"width:380px;height:150px;\">\n",
+    "<caption><center> <u> <font color='purple'> **Figure 1** </u></center></caption>\n",
+    "\n",
+    "显然，这样的算法表现会很差，因为像素值可能因为光线、人脸朝向甚至头部位置的微小变动，就产生剧烈的变化。\n",
+    "\n",
+    "因此，我们需要对图片进行编码，使用编码 $f(img)$ 进行元素级别的比较，可以得出更准确的判断。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. 神经风格迁移"
    ]
   },
