--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -166,6 +166,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 1.6.1 将人脸图片编码为128维的向量\n",
+    "\n",
+    "##### 1.6.1.1 使用卷积网络来计算编码\n",
+    "\n",
+    "FaceNet模型需要大量的数据训练非常长的时间。遵循应用深度学习的最佳时间，我们直接载入其它人已经预先训练好的权重。网络的架构使用的是[Szegedy *et al.*](https://arxiv.org/abs/1409.4842)提出的Inception模型。\n",
+    "\n",
+    "模型的两个关键点：\n",
+    "- 这个网络接受 96x96 维度的RBG图片作为输入，也就是说，一组输入图片（共 $m$ 的批量）的张量维度为 $(m, n_C, n_H, n_W) = (m, 3, 96, 96)$ \n",
+    "- 网络输出的矩阵为 $(m, 128)$，每张人脸图片都编码为128维的向量。\n",
+    "\n",
+    "执行下面的代码来创建模型。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "FRmodel = faceRecoModel(input_shape=(3, 96, 96))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Params: 3743280\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total Params:\", FRmodel.count_params())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "最终层设定为一个128神经元的全连接层，模型从而保证输出是一个128维的向量。之后我们就可以通过这个向量来比较两张人脸图片，具体如下：\n",
+    "\n",
+    "<img src=\"img/distance_kiank.png\" style=\"width:680px;height:250px;\">\n",
+    "<caption><center> <u> <font color='purple'> **Figure 2**: <br> </u> <font color='purple'> By computing a distance between two encodings and thresholding, you can determine if the two pictures represent the same person</center></caption>\n",
+    "\n",
+    "所以，满足下面两个条件，我们就可以认为编码足够好：\n",
+    "- 同人的编码非常接近\n",
+    "- 不同人的编码差异非常大\n",
+    "\n",
+    "Triplet损失函数是这两条规则的规范表述，它使得同人（Anchor和Positive）的编码接近，使不同人（\n",
+    "\n",
+    "The triplet loss function formalizes this, and tries to \"push\" the encodings of two images of the same person (Anchor and Positive) closer together, while \"pulling\" the encodings of two images of different persons (Anchor, Negative) further apart. \n",
+    "\n",
+    "<img src=\"images/triplet_comparison.png\" style=\"width:280px;height:150px;\">\n",
+    "<br>\n",
+    "<caption><center> <u> <font color='purple'> **Figure 3**: <br> </u> <font color='purple'> In the next part, we will call the pictures from left to right: Anchor (A), Positive (P), Negative (N)  </center></caption>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. 神经风格迁移"
    ]
   },
