Face Recognition: The Triplet Loss

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -222,13 +222,142 @@
     "- 同人的编码非常接近\n",
     "- 不同人的编码差异非常大\n",
     "\n",
-    "Triplet损失函数是这两条规则的规范表述，它使得同人（Anchor和Positive）的编码接近，使不同人（\n",
+    "Triplet损失函数是这两条规则的规范表述，它使得同人（Anchor和Positive）的编码接近，使不同人（Anchor和Negative）的编码疏远。\n",
     "\n",
-    "The triplet loss function formalizes this, and tries to \"push\" the encodings of two images of the same person (Anchor and Positive) closer together, while \"pulling\" the encodings of two images of different persons (Anchor, Negative) further apart. \n",
-    "\n",
-    "<img src=\"images/triplet_comparison.png\" style=\"width:280px;height:150px;\">\n",
+    "<img src=\"img/triplet_comparison.png\" style=\"width:280px;height:150px;\">\n",
     "<br>\n",
     "<caption><center> <u> <font color='purple'> **Figure 3**: <br> </u> <font color='purple'> In the next part, we will call the pictures from left to right: Anchor (A), Positive (P), Negative (N)  </center></caption>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.6.1.2 - Triplet损失函数\n",
+    "\n",
+    "对于图片 $x$，我们将其编码标记为 $f(x)$，其中 $f$ 是神经网络所表示的函数。\n",
+    "\n",
+    "<img src=\"img/f_x.png\" style=\"width:380px;height:150px;\">\n",
+    "\n",
+    "<!--\n",
+    "We will also add a normalization step at the end of our model so that $\\mid \\mid f(x) \\mid \\mid_2 = 1$ (means the vector of encoding should be of norm 1).\n",
+    "!-->\n",
+    "\n",
+    "一条训练样本将包含三张图片 $(A, P, N)$:  \n",
+    "\n",
+    "- A 表示 \"Anchor\" ——一张人脸图片\n",
+    "- P 表示 \"Positive\" ——和Anchor同人的另一张人脸图片\n",
+    "- N 表示 \"Negative\" ——和Anchor不同人的人脸照片\n",
+    "\n",
+    "这些三图片组合构成了整个训练集。我们用 $(A^{(i)}, P^{(i)}, N^{(i)})$ 来表示第 $i$ 个训练样本。\n",
+    "\n",
+    "我们希望能保证 $A^{(i)}$ 和 $P^{(i)}$ 的接近程度，至少比和 $N^{(i)}$ 的接近程度多出 $\\alpha$ 的间隔。\n",
+    "\n",
+    "$$\\mid \\mid f(A^{(i)}) - f(P^{(i)}) \\mid \\mid_2^2 + \\alpha < \\mid \\mid f(A^{(i)}) - f(N^{(i)}) \\mid \\mid_2^2$$\n",
+    "\n",
+    "接下来需要最小化triplet损失：\n",
+    "\n",
+    "$$\\mathcal{J} = \\sum^{m}_{i=1} \\large[ \\small \\underbrace{\\mid \\mid f(A^{(i)}) - f(P^{(i)}) \\mid \\mid_2^2}_\\text{(1)} - \\underbrace{\\mid \\mid f(A^{(i)}) - f(N^{(i)}) \\mid \\mid_2^2}_\\text{(2)} + \\alpha \\large ] \\small_+ \\tag{3}$$\n",
+    "\n",
+    "我们使用 \"$[z]_+$\" 来表示 $max(z,0)$.  \n",
+    "\n",
+    "注意:\n",
+    "- (1) 项是给定一个三元组后，A和P的平方距离；我们希望这个值尽可能小。 \n",
+    "- (2) 项是给定一个三元组后，A和N的平方距离；我们希望这个值尽可能大。所以在前面加一个负号是说得通的。\n",
+    "- $\\alpha$ 称为间隔，它是一个超参。这里我们使用 $\\alpha = 0.2$. \n",
+    "\n",
+    "绝大多数实现会对编码向量进行标准化，使得模等于1 (i.e., $\\mid \\mid f(img)\\mid \\mid_2$=1)；这里我们不用操心这个问题。\n",
+    "\n",
+    "**练习**: 实现triplet损失函数\n",
+    "\n",
+    "可供参考的函数: `tf.reduce_sum()`, `tf.square()`, `tf.subtract()`, `tf.add()`, `tf.maximum()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: triplet_loss\n",
+    "\n",
+    "def triplet_loss(y_true, y_pred, alpha = 0.2):\n",
+    "    \"\"\"\n",
+    "    Implementation of the triplet loss as defined by formula (3)\n",
+    "    \n",
+    "    Arguments:\n",
+    "    y_true -- true labels, required when you define a loss in Keras, you don't need it in this function.\n",
+    "    y_pred -- python list containing three objects:\n",
+    "            anchor -- the encodings for the anchor images, of shape (None, 128)\n",
+    "            positive -- the encodings for the positive images, of shape (None, 128)\n",
+    "            negative -- the encodings for the negative images, of shape (None, 128)\n",
+    "    \n",
+    "    Returns:\n",
+    "    loss -- real number, value of the loss\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    anchor, positive, negative = y_pred[0], y_pred[1], y_pred[2]\n",
+    "    \n",
+    "    ### START CODE HERE ### (≈ 4 lines)\n",
+    "    # Step 1: Compute the (encoding) distance between the anchor and the positive, you will need to sum over axis=-1\n",
+    "    pos_dist = tf.reduce_sum(tf.square(tf.subtract(anchor, positive)), axis=-1)\n",
+    "    # Step 2: Compute the (encoding) distance between the anchor and the negative, you will need to sum over axis=-1\n",
+    "    neg_dist = tf.reduce_sum(tf.square(tf.subtract(anchor, negative)), axis=-1)\n",
+    "    # Step 3: subtract the two previous distances and add alpha.\n",
+    "    basic_loss = tf.add(tf.subtract(pos_dist,neg_dist),alpha)\n",
+    "    # Step 4: Take the maximum of basic_loss and 0.0. Sum over the training examples.\n",
+    "    loss = tf.reduce_sum(tf.maximum(basic_loss,0))\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss = 528.143\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as test:\n",
+    "    tf.set_random_seed(1)\n",
+    "    y_true = (None, None, None)\n",
+    "    y_pred = (tf.random_normal([3, 128], mean=6, stddev=0.1, seed = 1),\n",
+    "              tf.random_normal([3, 128], mean=1, stddev=1, seed = 1),\n",
+    "              tf.random_normal([3, 128], mean=3, stddev=4, seed = 1))\n",
+    "    loss = triplet_loss(y_true, y_pred)\n",
+    "    \n",
+    "    print(\"loss = \" + str(loss.eval()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **loss**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           528.143\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>"
    ]
   },
   {
