Face Recognition: Loading the trained model

--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -364,6 +364,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 1.6.2 - 载入预训练的模型\n",
+    "\n",
+    "FaceNet是训练好优化Triplet损失的神经网络。由于训练需要大量的数据和计算量，这里我们会载入一个预训练好的模型。执行以下代码："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "FRmodel.compile(optimizer = 'adam', loss = triplet_loss, metrics = ['accuracy'])\n",
+    "load_weights_from_FaceNet(FRmodel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下面是一些编码距离的例子：\n",
+    "\n",
+    "<img src=\"img/distance_matrix.png\" style=\"width:380px;height:200px;\">\n",
+    "<br>\n",
+    "<caption><center> <u> <font color='purple'> **Figure 4**:</u> <br>  <font color='purple'> Example of distance outputs between three individuals' encodings</center></caption>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. 神经风格迁移"
    ]
   },
