--- a/Special applications - Face recognition & Neural style transfer.ipynb
+++ b/Special applications - Face recognition & Neural style transfer.ipynb
@@ -113,11 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, ZeroPadding2D, Activation, Input, concatenate\n",
@@ -181,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -316,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -390,6 +398,215 @@
     "<img src=\"img/distance_matrix.png\" style=\"width:380px;height:200px;\">\n",
     "<br>\n",
     "<caption><center> <u> <font color='purple'> **Figure 4**:</u> <br>  <font color='purple'> Example of distance outputs between three individuals' encodings</center></caption>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.6.3 - 应用模型\n",
+    "\n",
+    "##### 1.6.3.1 人脸验证\n",
+    "\n",
+    "首先我们需要构建一个数据库，里面包含所有准入人员的编码向量。生成编码可以调用 `img_to_encoding(image_path, model)` 。\n",
+    "\n",
+    "执行以下代码来构建数据库（表示为Python字段），这个数据库将所有人的姓名映射为128维的编码。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "database = {}\n",
+    "database[\"danielle\"] = img_to_encoding(\"img/danielle.png\", FRmodel)\n",
+    "database[\"younes\"] = img_to_encoding(\"img/younes.jpg\", FRmodel)\n",
+    "database[\"tian\"] = img_to_encoding(\"img/tian.jpg\", FRmodel)\n",
+    "database[\"andrew\"] = img_to_encoding(\"img/andrew.jpg\", FRmodel)\n",
+    "database[\"kian\"] = img_to_encoding(\"img/kian.jpg\", FRmodel)\n",
+    "database[\"dan\"] = img_to_encoding(\"img/dan.jpg\", FRmodel)\n",
+    "database[\"sebastiano\"] = img_to_encoding(\"img/sebastiano.jpg\", FRmodel)\n",
+    "database[\"bertrand\"] = img_to_encoding(\"img/bertrand.jpg\", FRmodel)\n",
+    "database[\"kevin\"] = img_to_encoding(\"img/kevin.jpg\", FRmodel)\n",
+    "database[\"felix\"] = img_to_encoding(\"img/felix.jpg\", FRmodel)\n",
+    "database[\"benoit\"] = img_to_encoding(\"img/benoit.jpg\", FRmodel)\n",
+    "database[\"arnaud\"] = img_to_encoding(\"img/arnaud.jpg\", FRmodel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "这样如果有人刷门禁卡（从而提供姓名），我们可以从数据库从查询到对应的编码，然后用摄像头拍摄到的照片编码进行比对，来确定身份是否匹配。\n",
+    "\n",
+    "**练习**: 实现 verify() 函数：\n",
+    "1. 计算图像的编码。\n",
+    "2. 计算编码与身份对应编码的举例。\n",
+    "3. 如果举例小鱼0.7，则开门，否则不开。\n",
+    "\n",
+    "如上所述，这里计算的是L2距离 (np.linalg.norm)。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: verify\n",
+    "\n",
+    "def verify(image_path, identity, database, model):\n",
+    "    \"\"\"\n",
+    "    Function that verifies if the person on the \"image_path\" image is \"identity\".\n",
+    "    \n",
+    "    Arguments:\n",
+    "    image_path -- path to an image\n",
+    "    identity -- string, name of the person you'd like to verify the identity. Has to be a resident of the Happy house.\n",
+    "    database -- python dictionary mapping names of allowed people's names (strings) to their encodings (vectors).\n",
+    "    model -- your Inception model instance in Keras\n",
+    "    \n",
+    "    Returns:\n",
+    "    dist -- distance between the image_path and the image of \"identity\" in the database.\n",
+    "    door_open -- True, if the door should open. False otherwise.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ### START CODE HERE ###\n",
+    "    \n",
+    "    # Step 1: Compute the encoding for the image. Use img_to_encoding() see example above. (≈ 1 line)\n",
+    "    encoding = img_to_encoding(image_path, model)\n",
+    "    \n",
+    "    # Step 2: Compute distance with identity's image (≈ 1 line)\n",
+    "    dist = np.linalg.norm(encoding-database[identity])\n",
+    "    \n",
+    "    # Step 3: Open the door if dist < 0.7, else don't open (≈ 3 lines)\n",
+    "    if dist < 0.7:\n",
+    "        print(\"It's \" + str(identity) + \", welcome home!\")\n",
+    "        door_open = True\n",
+    "    else:\n",
+    "        print(\"It's not \" + str(identity) + \", please go away\")\n",
+    "        door_open = False\n",
+    "        \n",
+    "    ### END CODE HERE ###\n",
+    "        \n",
+    "    return dist, door_open"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Younes想要刷卡进入，摄像头对它进行了拍摄(\"img/camera_0.jpg\")，我们对这张图使用验证算法：\n",
+    "\n",
+    "<img src=\"img/camera_0.jpg\" style=\"width:100px;height:100px;\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's younes, welcome home!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.67100745, True)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "verify(\"img/camera_0.jpg\", \"younes\", database, FRmodel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **It's younes, welcome home!**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (0.65939283, True)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "而Benoit使用了Kian的门禁卡，试图闯入。摄像头对他进行了拍摄 (\"img/camera_2.jpg)\n",
+    "<img src=\"img/camera_2.jpg\" style=\"width:100px;height:100px;\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's not kian, please go away\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.85800153, False)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "verify(\"img/camera_2.jpg\", \"kian\", database, FRmodel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**:\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **It's not kian, please go away**\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (0.86224014, False)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>"
    ]
   },
   {
