--- a/Recurrent Neural Networks.ipynb
+++ b/Recurrent Neural Networks.ipynb
@@ -22,7 +22,20 @@
    "source": [
     "## 2. 标记符号 Notations\n",
     "\n",
-    "以命名实体识别（Named Entity Recognition）问题为例，我要需要一套标记符号，来描述这个监督学习问题。这里，用符号 $x^{(i)<t>}$ 表示第 i 个训练集的第 t 个词，用符号 $T_x^{(i)}$ 表示第 i 个训练集总共的单词数。目标变量 y 也类似。\n",
+    "以命名实体识别（Named Entity Recognition）问题为例，我们需要一套标记符号，来描述这个监督学习问题。这里，用符号 $x^{(i)<t>}$ 表示第 i 个训练集的第 t 个词，用符号 $T_x^{(i)}$ 表示第 i 个训练集总共的单词数。目标变量 y 也类似。\n",
+    "\n",
+    "**标记**:\n",
+    "- 上标 $[l]$ 表示第 $l^{th}$ 层对应的对象\n",
+    "    - 举例: $a^{[4]}$ 是第 $4^{th}$ 层激活层。 $W^{[5]}$ 和 $b^{[5]}$ 是第 $5^{th}$ 层的参数\n",
+    "\n",
+    "- 上标 $(i)$ 表示第 $i^{th}$ 个训练样本相关的对象\n",
+    "    - 举例: $x^{(i)}$ 表示输入的第 $i^{th}$ 个训练样本\n",
+    "\n",
+    "- 上标 $\\langle t \\rangle$ 表示在第 $t^{th}$ 个时间步长的对象 \n",
+    "    - 举例: $x^{\\langle t \\rangle}$ 表示输入x在第 $t^{th}$ 个时间步长的值。 $x^{(i)\\langle t \\rangle}$ 是训练样本 i 在第 $t^{th}$ 个时间步长的值\n",
+    "    \n",
+    "- 下标 $i$ 表示向量的第 $i^{th}$ 个元素\n",
+    "    - 举例: $a^{[l]}_i$ 表示激活层 $l$ 的第 $i^{th}$ 个元素\n",
     "\n",
     "![Motivating example RNN.png](img/Motivating example RNN.png)\n",
     "\n",
@@ -43,10 +56,165 @@
     "\n",
     "![Why not a standard network.png](img/Why not a standard network.png)\n",
     "\n",
-    "循环神经网络的模型：初始化 $a^{<0>}$ 为0向量，红色的参数共享，序列中每个单词的激活结果，作为下一个单词模型的输入之一。下图的左右描述是等价的。注意到这个RNN模型实际上是单向RNN，顺序在前的单词可以对顺序在后的单词施加影响，反之则不行，因而模型也就无法区分下面两个句子的不同。后面会说，经过一点简单的修改，也可以获得**双向RNN（Bidirected RNN）**\n",
+    "循环神经网络具有“记忆”，因而对于自然语言处理和其它序列模型都非常有效。模型可以每次一个接受 $x^{<t>}$ （比如一个单词），通过隐藏层的激活情况，记住该项的信息/上下文，然后传递给下一个项目。\n",
     "\n",
-    "![Recurrent Neural Networks.png](img/Recurrent Neural Networks.png)\n",
+    "循环神经网络的模型：初始化 $a^{<0>}$ 为0向量，序列中每个单词的激活结果，作为下一个单词模型的输入之一。注意到这个RNN模型实际上是单向RNN，顺序在前的单词可以对顺序在后的单词施加影响，反之则不行。后面会说，经过一点简单的修改，也可以获得**双向RNN（Bidirected RNN）**\n",
     "\n",
+    "![Recurrent Neural Networks.png](img/RNN.png)\n",
+    "\n",
+    "循环神经网络可以认为是上面单个循环神经网络单元的不断重复，每个循环神经网络单元的内部操作如下：\n",
+    "\n",
+    "![rnn_step_forward](img/rnn_step_forward.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from rnn_utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: rnn_cell_forward\n",
+    "\n",
+    "def rnn_cell_forward(xt, a_prev, parameters):\n",
+    "    \"\"\"\n",
+    "    Implements a single forward step of the RNN-cell as described in Figure (2)\n",
+    "\n",
+    "    Arguments:\n",
+    "    xt -- your input data at timestep \"t\", numpy array of shape (n_x, m).\n",
+    "    a_prev -- Hidden state at timestep \"t-1\", numpy array of shape (n_a, m)\n",
+    "    parameters -- python dictionary containing:\n",
+    "                        Wax -- Weight matrix multiplying the input, numpy array of shape (n_a, n_x)\n",
+    "                        Waa -- Weight matrix multiplying the hidden state, numpy array of shape (n_a, n_a)\n",
+    "                        Wya -- Weight matrix relating the hidden-state to the output, numpy array of shape (n_y, n_a)\n",
+    "                        ba --  Bias, numpy array of shape (n_a, 1)\n",
+    "                        by -- Bias relating the hidden-state to the output, numpy array of shape (n_y, 1)\n",
+    "    Returns:\n",
+    "    a_next -- next hidden state, of shape (n_a, m)\n",
+    "    yt_pred -- prediction at timestep \"t\", numpy array of shape (n_y, m)\n",
+    "    cache -- tuple of values needed for the backward pass, contains (a_next, a_prev, xt, parameters)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Retrieve parameters from \"parameters\"\n",
+    "    Wax = parameters[\"Wax\"]\n",
+    "    Waa = parameters[\"Waa\"]\n",
+    "    Wya = parameters[\"Wya\"]\n",
+    "    ba = parameters[\"ba\"]\n",
+    "    by = parameters[\"by\"]\n",
+    "    \n",
+    "    ### START CODE HERE ### (≈2 lines)\n",
+    "    # compute next activation state using the formula given above\n",
+    "    a_next = np.tanh(Waa.dot(a_prev) + Wax.dot(xt) + ba)\n",
+    "    # compute output of the current cell using the formula given above\n",
+    "    yt_pred = softmax(Wya.dot(a_next) + by)\n",
+    "    ### END CODE HERE ###\n",
+    "    \n",
+    "    # store values you need for backward propagation in cache\n",
+    "    cache = (a_next, a_prev, xt, parameters)\n",
+    "    \n",
+    "    return a_next, yt_pred, cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a_next[4] =  [ 0.59584544  0.18141802  0.61311866  0.99808218  0.85016201  0.99980978\n",
+      " -0.18887155  0.99815551  0.6531151   0.82872037]\n",
+      "a_next.shape =  (5, 10)\n",
+      "yt_pred[1] = [ 0.9888161   0.01682021  0.21140899  0.36817467  0.98988387  0.88945212\n",
+      "  0.36920224  0.9966312   0.9982559   0.17746526]\n",
+      "yt_pred.shape =  (2, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "xt = np.random.randn(3,10)\n",
+    "a_prev = np.random.randn(5,10)\n",
+    "Waa = np.random.randn(5,5)\n",
+    "Wax = np.random.randn(5,3)\n",
+    "Wya = np.random.randn(2,5)\n",
+    "ba = np.random.randn(5,1)\n",
+    "by = np.random.randn(2,1)\n",
+    "parameters = {\"Waa\": Waa, \"Wax\": Wax, \"Wya\": Wya, \"ba\": ba, \"by\": by}\n",
+    "\n",
+    "a_next, yt_pred, cache = rnn_cell_forward(xt, a_prev, parameters)\n",
+    "print(\"a_next[4] = \", a_next[4])\n",
+    "print(\"a_next.shape = \", a_next.shape)\n",
+    "print(\"yt_pred[1] =\", yt_pred[1])\n",
+    "print(\"yt_pred.shape = \", yt_pred.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**预期输出**: \n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td>\n",
+    "            **a_next[4]**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [ 0.59584544  0.18141802  0.61311866  0.99808218  0.85016201  0.99980978\n",
+    " -0.18887155  0.99815551  0.6531151   0.82872037]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **a_next.shape**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (5, 10)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **yt[1]**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           [ 0.9888161   0.01682021  0.21140899  0.36817467  0.98988387  0.88945212\n",
+    "  0.36920224  0.9966312   0.9982559   0.17746526]\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td>\n",
+    "            **yt.shape**:\n",
+    "        </td>\n",
+    "        <td>\n",
+    "           (2, 10)\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "RNN的前向传播过程：\n",
     "\n",
     "![Forward Propagation.png](img/Forward Propagation.png)\n",
